# youtube

./: .gitignore  Cargo.toml  README.md
AWSUserLearnsIBMCloud/: cloudant_test.py
ActixWebTaskService/: Cargo.toml  Dockerfile  compose.yaml
ActixWebTaskService/final_docker_files/: Dockerfile
ActixWebTaskService/src/: main.rs
ActixWebTaskService/src/api/: task.rs
ActixWebTaskService/src/model/: task.rs
ActixWebTaskService/src/repository/: ddb.rs
CloudWatchMetricsLightningTutorial/: cw_lightning_tutorial.py
CodersCanBeArtists/: aws_pyramid.py  jsconfig.json  sketch.js  sketch2.js
FullStackRust/: .gitignore  Cargo.toml
FullStackRust/backend/: Cargo.toml
FullStackRust/backend/src/: main.rs
FullStackRust/common/: Cargo.toml
FullStackRust/common/src/model/: task.rs  user.rs
FullStackRust/frontend/: Cargo.toml  index.html  style.css
FullStackRust/frontend/src/: main.rs
GleamVsRust/glm_compared_to_rust/: README.md  gleam.toml  manifest.toml
GleamVsRust/glm_compared_to_rust/src/: autoboxing.gleam  combinators.gleam  custom_types.gleam  custom_types_2.gleam  declaration.gleam  fallable.gleam  generic_functions.gleam  generic_functions_2.gleam  glm_compared_to_rust.gleam  immutable.gleam  labelled_arguments.gleam  list_destructure.gleam  no_methods.gleam  no_types_in_functions.gleam  record_instantiate.gleam  string_pattern_match.gleam  (+2 more)
GleamVsRust/rust_compared_to_gleam/: Cargo.toml
HtmxRustZig/htmx_axum/: Cargo.toml
HtmxRustZig/htmx_httpz/: build.zig  build.zig.zon
IfYouHaveTime/: build.gradle  log4j.properties  settings.gradle
IntroductionToCDK/: .gitignore  README.md  cdk.json  package-lock.json  package.json
IntroductionToCDK/lib/: introduction_to_cdk-stack.ts
IntroductionToCDK/test/: introduction_to_cdk.test.ts
Kona/: .gitignore  Dockerfile
Kona/backend/: Cargo.toml
Kona/frontend/: Cargo.toml
Kona/frontend/src/: main.rs
Kona/frontend/src/component/: blog_view.rs  mod.rs
Konaa/backend/: Cargo.toml
Konaa/frontend/: Cargo.toml  Trunk.toml
Konaa/frontend/src/: lib.rs  main.rs
Konaa/frontend/src/component/: blog.rs  mod.rs  post.rs
KonaaAuth/: .gitignore
KonaaAuth/backend/: Cargo.toml  cert.pem  key.pem  test.txt
KonaaAuth/frontend/: Cargo.toml  Trunk.toml
KonaaAuth/frontend/src/: .lib.rs.swp  lib.rs  main.rs
KonaaAuth/frontend/src/component/: blog.rs
KonaaAuth/src/: main.rs
KonaaSSR/backend/: Cargo.toml
KonaaSSR/backend/src/: main.rs
KonaaSSR/backend/src/api/: blog.rs
KonaaSSR/backend/src/repository/: ddb.rs
KonaaSSR/common/: Cargo.toml
KonaaSSR/frontend/: index.html
KonaaSvelte/: package-lock.json  package.json
KonaaSvelte/src/: hooks.ts
MakeArtWithCode/: .gitignore
MemorizeThisDB/: build.gradle  settings.gradle
Mojo2024/mojo_url_summarize2/: main.mojo  mojoproject.toml
Mojo2024/python_url_summarizer/: pyproject.toml
Mojo2024/python_url_summarizer/python_url_summarizer/: main.py
MostPowerfulEC2/: ec2_profiler.sh  instance_profiler.py
MostPowerfulExpensiveEC2/: ec2_profiler.sh  instance_profiler.py
NucliaExample/: nuclia_search.py  nuclia_tour.py
RustAlienDataTypes/: Cargo.toml
RustFrontEnd/: Cargo.toml  index.html  style.css
RustFrontEnd/src/: main.rs
RustOnAWS/: .gitignore  Cargo.toml  rust_lambda_helpers.zsh
RustOnAWS/src/: main.rs
RustOpenAI/: Cargo.toml
RustOpenAI/src/: main.rs
RustPizza/: Cargo.toml
RustPizza/src/: main.rs
RustVsSevenLanguages/crystal/: LICENSE  README.md  shard.yml
RustVsSevenLanguages/ex/: .gitignore  Elixir.SumModule.beam  README.md  mix.exs
RustVsSevenLanguages/haskell/: LICENSE  haskell.cabal
RustVsSevenLanguages/julia/: Project.toml
RustVsSevenLanguages/lua/: sum.lua
RustVsSevenLanguages/nim/: nim  nim.nimble
Rustflix/: .env  Cargo.toml
Rustflix/migrations/2022-04-12-214038_videos/: down.sql  up.sql
Rustflix/migrations/2022-04-12-214107_users/: down.sql  up.sql
Rustflix/migrations/2022-04-12-214118_views/: down.sql  up.sql
Rustflix/migrations/2022-04-20-180357_videos/: down.sql  up.sql
Rustflix/src/: args.rs  db.rs  lib.rs  main.rs  models.rs  ops.rs  schema.rs
Rustflix/src/ops/: user_ops.rs  video_ops.rs  view_ops.rs
Transformers/: repl.py  visualize.py
bert_test/: Cargo.toml
bert_test/src/: main.rs
hf_cli_chatbot/: Cargo.toml
hf_cli_chatbot/src/: main.rs
interior_mutability/: Cargo.toml
leptos-redis-upstash/: Cargo.toml  get_entries.lua
leptos-redis-upstash/src/: app.rs  journal.rs  lib.rs  main.rs
leptos-redis-upstash/style/: main.scss
linfa_test/: Cargo.toml  dt.tex
linfa_test/src/: main.rs
parseable/: parseable-env  parseable-env-secret  vector.toml
questdb_integration/: Cargo.toml
questdb_integration/src/: main.rs
result_and_option/KotlinExceptionExample/: build.gradle.kts  settings.gradle.kts
rust-stripe-webapp/: Cargo.toml  README.md  rust-toolchain.toml  tailwind.config.js
rust-stripe-webapp/src/: app.rs  main.rs
rust-stripe-webapp/style/: tailwind.css
rust_decl_macros/: Cargo.toml
rust_decl_macros/src/: main.rs
rust_polymorphism/: Cargo.toml
rust_polymorphism/src/: main.rs
rusty_llama_webapp/: README.md  package-lock.json
src/: main.rs
src/api/: mod.rs  task.rs  user.rs
src/model/: mod.rs
src/repository/: db.rs
star-collector/: .gitignore  Cargo.toml
star-collector/src/: main.rs
vlang_tour/: .gitignore  v.mod
vlang_tour/src/: arrays.v  closures.v  functions.v  hello_v.v  interfaces.v  markdown.v  modules.v  multiple_values.v  primitives.v  references.v  static_typing.v  strings.v  struct_embedding.v  struct_methods.v  structs.v  tour_test.v  variables.v
webapp-parseable-example/: Cargo.toml  README.md  get_entries.lua
webapp-parseable-example/src/: journal.rs
webapp-parseable-example/style/: main.scss
(+68 files in other folders)
