[package]
name = "rust_on_aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "^0.3"
aws-sdk-dynamodb = "^0.3"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
uuid = { version = "^0.8", features = ["v4"] }