[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
#hyper = { version = "^0.14", features = ["full"] } #maybe remove?
reqwasm = "0.2"
wasm-bindgen-futures = "0.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
#hyper-tls = "^0.5"