[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
reqwasm = "0.2"
wasm-bindgen-futures = "0.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
log = "0.4.6"
wasm-logger = "^0.2"
common = { path="../common" }
chrono = { version = "^0", features = ["wasmbind"] }
yew-oauth2 = { version = "0.3", features = ["router"] }
oauth2 = "4.1"
yew-router = { version = "0.16", package = "yew-router-nested" } 
