[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["ssr", "tokio"] }
frontend = { path = "../frontend" }
actix-web = "^4"
actix-files = "0.6"
actix-web-lab = "^0"
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
serde = { version = "^1", features = ["derive"] }
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
log = "^0.4"
common = { path = "../common" }
chrono = "^0"
uuid = { version = "^0.8", features = ["v4", "wasm-bindgen"] }
derive_more = "^0"